<package>
  <name>youbot_flexbe_behaviors</name>
  <version>1.0.0</version>

  <description>
     youbot_flexbe_behaviors references all implemented behaviors.
  </description>

  <maintainer email="sm2296@cornell.edu">Spyros Maniatopoulos</maintainer>
  <maintainer email="philipp.schillinger@de.bosch.com">Philipp Schillinger</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <export>
    <flexbe_behaviors />
  </export>

</package>
