<package>
  <name>youbot_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     youbot_flexbe_states provides a collection of youBot-specific states.
  </description>
  <maintainer email="sm2296@cornell.edu">Spyros Maniatopoulos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

</package>
